...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawable_layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...

                <EditText
                    android:id="@+id/namesync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/addresssync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/phonesync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Spinner
                    android:id="@+id/insurancesync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/paymentsync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

                <ListView
                    android:id="@+id/listViewServices"
                    android:layout_width="260dp"
                    android:layout_height="200dp">
...

                <ListView
                    android:id="@+id/listViewServicesAdded"
                    android:layout_width="260dp"
                    android:layout_height="200dp" >
...

                    <Spinner
                        android:id="@+id/NstartHM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartMM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendHM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendMM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartHTU"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartMTU"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendHTU"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendMTU"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartHW"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartMW"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendHW"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendMW"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartHTH"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartMTH"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendHTH"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendMTH"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartHF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartMF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendHF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendMF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartHSA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartMSA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendHSA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendMSA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartHSU"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NstartMSU"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendHSU"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/NendMSU"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
...
