<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/edit"
        android:title="edit" />
    <item
        android:id="@+id/logout"
        android:title="logout" />
    <item
        android:id="@+id/save"
        android:title="save" />
    <item
        android:id="@+id/delete"
        android:title="delete" />
</menu>