...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="add" />

        <ListView
            android:id="@+id/listViewProducts"
            android:layout_width="409dp"
            android:layout_height="239dp">

        </ListView>

        <Button
...
